--- a/images and css/Footer.css
+++ b/images and css/Footer.css
@@ -1,140 +1,1 @@
-footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  width: 100%;
-  height: 65vh;
-  background-color: #1a2124;
-  font-family: 'Open Sans'; }
-  footer .leftside {
-    width: 50%;
-    height: 100%;
-    color: #d8d7d7;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    -webkit-box-pack: end;
-    -ms-flex-pack: end;
-    justify-content: flex-end; }
-    footer .leftside .leftside_box {
-      width: 75%;
-      height: 80%; }
-      footer .leftside .leftside_box .box_top {
-        height: 50%;
-        width: 100%; }
-        footer .leftside .leftside_box .box_top .top_contents {
-          margin-top: 10%; }
-          footer .leftside .leftside_box .box_top .top_contents .heading {
-            margin-bottom: 5%;
-            font-size: 0.852rem; }
-          footer .leftside .leftside_box .box_top .top_contents .para {
-            font-size: 0.67rem;
-            max-width: 85%; }
-      footer .leftside .leftside_box .box_bottom {
-        height: 50%;
-        width: 100%; }
-        footer .leftside .leftside_box .box_bottom .bottom_contents {
-          display: -webkit-box;
-          display: -ms-flexbox;
-          display: flex;
-          -webkit-box-orient: horizontal;
-          -webkit-box-direction: normal;
-          -ms-flex-direction: row;
-          flex-direction: row;
-          -webkit-box-pack: justify;
-          -ms-flex-pack: justify;
-          justify-content: space-between;
-          width: 80%; }
-          footer .leftside .leftside_box .box_bottom .bottom_contents .items {
-            margin-top: -10%; }
-            footer .leftside .leftside_box .box_bottom .bottom_contents .items .item_heading {
-              font-size: 0.852rem;
-              font-weight: 600; }
-            footer .leftside .leftside_box .box_bottom .bottom_contents .items .item_content {
-              font-size: 0.67rem;
-              line-height: 180%; }
-  footer .rightside {
-    width: 50%;
-    height: 100%;
-    color: #d8d7d7; }
-    footer .rightside .rightside_box {
-      width: 75%;
-      height: 80%; }
-      footer .rightside .rightside_box .box_top {
-        height: 50%;
-        width: 100%;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-        flex-direction: row; }
-        footer .rightside .rightside_box .box_top .top_blank {
-          width: 20%;
-          margin-top: 10%; }
-        footer .rightside .rightside_box .box_top .top_contents {
-          margin-top: 10%;
-          width: 80%;
-          justify-items: end; }
-          footer .rightside .rightside_box .box_top .top_contents .heading {
-            margin-bottom: 5%;
-            font-size: 0.852rem; }
-          footer .rightside .rightside_box .box_top .top_contents .input {
-            display: -webkit-box;
-            display: -ms-flexbox;
-            display: flex;
-            -webkit-box-orient: horizontal;
-            -webkit-box-direction: normal;
-            -ms-flex-direction: row;
-            flex-direction: row;
-            -webkit-box-align: center;
-            -ms-flex-align: center;
-            align-items: center; }
-            footer .rightside .rightside_box .box_top .top_contents .input input {
-              height: 8vh;
-              width: 80%;
-              border-radius: 8px 0 0 8px;
-              border: none;
-              outline: none;
-              text-indent: 5%; }
-            footer .rightside .rightside_box .box_top .top_contents .input .input_button {
-              height: 8vh;
-              width: 15%;
-              background-color: #835fa8;
-              border-radius: 0 8px 8px 0;
-              font-size: 2rem;
-              display: -webkit-box;
-              display: -ms-flexbox;
-              display: flex;
-              -webkit-box-orient: horizontal;
-              -webkit-box-direction: normal;
-              -ms-flex-direction: row;
-              flex-direction: row;
-              -webkit-box-align: center;
-              -ms-flex-align: center;
-              align-items: center;
-              -webkit-box-pack: center;
-              -ms-flex-pack: center;
-              justify-content: center; }
-          footer .rightside .rightside_box .box_top .top_contents .text {
-            font-size: 0.6rem;
-            line-height: 145%;
-            margin-top: 0.5rem; }
-      footer .rightside .rightside_box .box_bottom {
-        height: 50%;
-        width: 100%; }
+footer{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;width:100%;height:65vh;background-color:#1a2124;font-family:'Open Sans'}footer .leftside{width:50%;height:100%;color:#d8d7d7;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;-webkit-box-pack:end;-ms-flex-pack:end;justify-content:flex-end}footer .leftside .leftside_box{width:75%;height:80%}footer .leftside .leftside_box .box_top{height:50%;width:100%}footer .leftside .leftside_box .box_top .top_contents{margin-top:10%}footer .leftside .leftside_box .box_top .top_contents .heading{margin-bottom:5%;font-size:0.852rem}footer .leftside .leftside_box .box_top .top_contents .para{font-size:0.67rem;max-width:85%}footer .leftside .leftside_box .box_bottom{height:50%;width:100%}footer .leftside .leftside_box .box_bottom .bottom_contents{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;width:80%}footer .leftside .leftside_box .box_bottom .bottom_contents .items{margin-top:-10%}footer .leftside .leftside_box .box_bottom .bottom_contents .items .item_heading{font-size:0.852rem;font-weight:600}footer .leftside .leftside_box .box_bottom .bottom_contents .items .item_content{font-size:0.67rem;line-height:180%}footer .rightside{width:50%;height:100%;color:#d8d7d7}footer .rightside .rightside_box{width:75%;height:80%}footer .rightside .rightside_box .box_top{height:50%;width:100%;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row}footer .rightside .rightside_box .box_top .top_blank{width:20%;margin-top:10%}footer .rightside .rightside_box .box_top .top_contents{margin-top:10%;width:80%;justify-items:end}footer .rightside .rightside_box .box_top .top_contents .heading{margin-bottom:5%;font-size:0.852rem}footer .rightside .rightside_box .box_top .top_contents .input{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;-webkit-box-align:center;-ms-flex-align:center;align-items:center}footer .rightside .rightside_box .box_top .top_contents .input input{height:8vh;width:80%;border-radius:8px 0 0 8px;border:none;outline:none;text-indent:5%}footer .rightside .rightside_box .box_top .top_contents .input .input_button{height:8vh;width:15%;background-color:#835fa8;border-radius:0 8px 8px 0;font-size:2rem;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}footer .rightside .rightside_box .box_top .top_contents .text{font-size:0.6rem;line-height:145%;margin-top:0.5rem}footer .rightside .rightside_box .box_bottom{height:50%;width:100%}
