--- a/images and css/Hover and Active.css
+++ b/images and css/Hover and Active.css
@@ -1,41 +1,1 @@
-/*Section 1*/
-section:nth-child(1) .section1_firstHalf .firstHalf_heading .heading_others .others_inputButton:hover {
-  -webkit-filter: brightness(85%);
-  filter: brightness(85%); }
-
-section:nth-child(1) .section1_firstHalf .firstHalf_heading .heading_others .others_inputButton:active {
-  border: 2px solid #835fa8;
-  background-color: white;
-  color: #835fa8; }
-
-section:nth-child(1) .section1_firstHalf .firstHalf_heading .heading_others .others_menu .menu_1:hover,
-section:nth-child(1) .section1_firstHalf .firstHalf_heading .heading_others .others_menu .menu_2:hover,
-section:nth-child(1) .section1_firstHalf .firstHalf_heading .heading_others .others_menu .menu_3:hover {
-  -webkit-transform-origin: center;
-  -ms-transform-origin: center;
-  transform-origin: center;
-  -webkit-transform: scaleX(1.2);
-  -ms-transform: scaleX(1.2);
-  transform: scaleX(1.2); }
-
-section:nth-child(1) .section1_secondHalf .secondHalf_writing input:hover {
-  -webkit-filter: brightness(85%);
-  filter: brightness(85%); }
-
-section:nth-child(1) .section1_secondHalf .secondHalf_writing input:active {
-  border: 2px solid #3dd2ae;
-  background-color: white;
-  color: #3dd2ae; }
-
-section:nth-Child(2) .section2_firstHalf .firstHalf_contents .topic input:hover {
-  -webkit-filter: brightness(85%);
-  filter: brightness(85%); }
-
-section:nth-Child(2) .section2_firstHalf .firstHalf_contents .topic input:active {
-  border: 2px solid #3dd2ae;
-  background-color: white;
-  color: #3dd2ae; }
-
-section:nth-Child(2) .section2_secondHalf .secondHalf_box .box_image input:active {
-  background-color: white;
-  color: #a8a8a8; }
+section:first-child .section1_firstHalf .firstHalf_heading .heading_others .others_inputButton:hover{-webkit-filter:brightness(85%);filter:brightness(85%)}section:first-child .section1_firstHalf .firstHalf_heading .heading_others .others_inputButton:active{border:2px solid #835fa8;background-color:white;color:#835fa8}section:first-child .section1_firstHalf .firstHalf_heading .heading_others .others_menu .menu_1:hover,section:first-child .section1_firstHalf .firstHalf_heading .heading_others .others_menu .menu_2:hover,section:first-child .section1_firstHalf .firstHalf_heading .heading_others .others_menu .menu_3:hover{-webkit-transform-origin:center;-ms-transform-origin:center;transform-origin:center;-webkit-transform:scaleX(1.2);-ms-transform:scaleX(1.2);transform:scaleX(1.2)}section:first-child .section1_secondHalf .secondHalf_writing input:hover{-webkit-filter:brightness(85%);filter:brightness(85%)}section:first-child .section1_secondHalf .secondHalf_writing input:active{border:2px solid #3dd2ae;background-color:white;color:#3dd2ae}section:nth-Child(2) .section2_firstHalf .firstHalf_contents .topic input:hover{-webkit-filter:brightness(85%);filter:brightness(85%)}section:nth-Child(2) .section2_firstHalf .firstHalf_contents .topic input:active{border:2px solid #3dd2ae;background-color:white;color:#3dd2ae}section:nth-Child(2) .section2_secondHalf .secondHalf_box .box_image input:active{background-color:white;color:#a8a8a8}
