--- a/images and css/Section_3_Design.css
+++ b/images and css/Section_3_Design.css
@@ -1,132 +1,1 @@
-section:nth-child(3) {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  width: 100%;
-  font-family: 'Open Sans'; }
-  section:nth-child(3) .section3_firstHalf {
-    width: 100%;
-    height: 75vh;
-    background-color: #2b303b;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center; }
-    section:nth-child(3) .section3_firstHalf .firstHalf_container {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-      flex-direction: row;
-      -webkit-box-align: start;
-      -ms-flex-align: start;
-      align-items: flex-start;
-      -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-      justify-content: space-evenly; }
-      section:nth-child(3) .section3_firstHalf .firstHalf_container .topic {
-        width: 13%;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-        flex-direction: column; }
-        section:nth-child(3) .section3_firstHalf .firstHalf_container .topic .icon {
-          color: #3dd2ae;
-          font-size: 50px;
-          margin-bottom: 25px; }
-        section:nth-child(3) .section3_firstHalf .firstHalf_container .topic .heading {
-          display: -webkit-box;
-          display: -ms-flexbox;
-          display: flex;
-          -webkit-box-orient: horizontal;
-          -webkit-box-direction: normal;
-          -ms-flex-direction: row;
-          flex-direction: row;
-          margin-bottom: 35px;
-          font-size: 21px; }
-          section:nth-child(3) .section3_firstHalf .firstHalf_container .topic .heading .heading_num {
-            color: #516188; }
-          section:nth-child(3) .section3_firstHalf .firstHalf_container .topic .heading .heading_name {
-            color: white; }
-        section:nth-child(3) .section3_firstHalf .firstHalf_container .topic .para {
-          color: #979797;
-          font-size: 0.857rem;
-          width: 121%; }
-  section:nth-child(3) .section3_secondHalf {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    width: 100%;
-    height: 60vh; }
-    section:nth-child(3) .section3_secondHalf .secondHalf_leftside {
-      width: 50%;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-      flex-direction: row;
-      -webkit-box-align: center;
-      -ms-flex-align: center;
-      align-items: center;
-      -webkit-box-pack: center;
-      -ms-flex-pack: center;
-      justify-content: center;
-      background-color: #e9eef1; }
-      section:nth-child(3) .section3_secondHalf .secondHalf_leftside .leftside_container {
-        width: 45%; }
-        section:nth-child(3) .section3_secondHalf .secondHalf_leftside .leftside_container .heading {
-          display: -webkit-box;
-          display: -ms-flexbox;
-          display: flex;
-          -webkit-box-orient: horizontal;
-          -webkit-box-direction: normal;
-          -ms-flex-direction: row;
-          flex-direction: row;
-          -webkit-box-align: center;
-          -ms-flex-align: center;
-          align-items: center;
-          font-size: 2rem;
-          font-weight: 100; }
-          section:nth-child(3) .section3_secondHalf .secondHalf_leftside .leftside_container .heading .heading_icon {
-            color: #835fa8; }
-          section:nth-child(3) .section3_secondHalf .secondHalf_leftside .leftside_container .heading .heading_name {
-            margin-left: 5%; }
-        section:nth-child(3) .section3_secondHalf .secondHalf_leftside .leftside_container .para_1 {
-          color: #979797;
-          line-height: 1.4rem; }
-        section:nth-child(3) .section3_secondHalf .secondHalf_leftside .leftside_container .para_2 {
-          font-size: 0.753rem;
-          line-height: 1.4rem;
-          margin-top: 1.8rem; }
-    section:nth-child(3) .section3_secondHalf .secondHalf_rightside {
-      background: url("img_3.jpg");
-      background-size: 100%;
-      height: 100%;
-      width: 50%; }
+section:nth-child(3){display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-ms-flex-align:center;align-items:center;width:100%;font-family:'Open Sans'}section:nth-child(3) .section3_firstHalf{width:100%;height:75vh;background-color:#2b303b;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}section:nth-child(3) .section3_firstHalf .firstHalf_container{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;-webkit-box-align:start;-ms-flex-align:start;align-items:flex-start;-webkit-box-pack:space-evenly;-ms-flex-pack:space-evenly;justify-content:space-evenly}section:nth-child(3) .section3_firstHalf .firstHalf_container .topic{width:13%;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column}section:nth-child(3) .section3_firstHalf .firstHalf_container .topic .icon{color:#3dd2ae;font-size:50px;margin-bottom:25px}section:nth-child(3) .section3_firstHalf .firstHalf_container .topic .heading{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;margin-bottom:35px;font-size:21px}section:nth-child(3) .section3_firstHalf .firstHalf_container .topic .heading .heading_num{color:#516188}section:nth-child(3) .section3_firstHalf .firstHalf_container .topic .heading .heading_name{color:white}section:nth-child(3) .section3_firstHalf .firstHalf_container .topic .para{color:#979797;font-size:0.857rem;width:121%}section:nth-child(3) .section3_secondHalf{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;width:100%;height:60vh}section:nth-child(3) .section3_secondHalf .secondHalf_leftside{width:50%;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;background-color:#e9eef1}section:nth-child(3) .section3_secondHalf .secondHalf_leftside .leftside_container{width:45%}section:nth-child(3) .section3_secondHalf .secondHalf_leftside .leftside_container .heading{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;-webkit-box-align:center;-ms-flex-align:center;align-items:center;font-size:2rem;font-weight:100}section:nth-child(3) .section3_secondHalf .secondHalf_leftside .leftside_container .heading .heading_icon{color:#835fa8}section:nth-child(3) .section3_secondHalf .secondHalf_leftside .leftside_container .heading .heading_name{margin-left:5%}section:nth-child(3) .section3_secondHalf .secondHalf_leftside .leftside_container .para_1{color:#979797;line-height:1.4rem}section:nth-child(3) .section3_secondHalf .secondHalf_leftside .leftside_container .para_2{font-size:0.753rem;line-height:1.4rem;margin-top:1.8rem}section:nth-child(3) .section3_secondHalf .secondHalf_rightside{background:url("img_3.jpg");background-size:100%;height:100%;width:50%}
