--- a/images and css/Media Query (480px width).css
+++ b/images and css/Media Query (480px width).css
@@ -1,26 +1,1 @@
-@media only screen and (max-width: 480px) {
-  section:nth-child(1) .section1_firstHalf {
-    height: 30vh;
-    width: 100%; }
-    section:nth-child(1) .section1_firstHalf .firstHalf_heading .heading_logo {
-      height: 10vh; }
-    section:nth-child(1) .section1_firstHalf .firstHalf_heading .heading_others {
-      height: 10vh; }
-      section:nth-child(1) .section1_firstHalf .firstHalf_heading .heading_others .others_inputText {
-        width: 40%;
-        height: 40%; }
-      section:nth-child(1) .section1_firstHalf .firstHalf_heading .heading_others .others_inputButton {
-        width: 30%;
-        height: 40%; }
-      section:nth-child(1) .section1_firstHalf .firstHalf_heading .heading_others .others_menu {
-        width: 20%;
-        height: 40%;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-        flex-direction: column;
-        margin-right: -10%;
-        margin-top: -1%; } }
+@media only screen and (max-width:480px){section:first-child .section1_firstHalf{height:30vh;width:100%}section:first-child .section1_firstHalf .firstHalf_heading .heading_logo{height:10vh}section:first-child .section1_firstHalf .firstHalf_heading .heading_others{height:10vh}section:first-child .section1_firstHalf .firstHalf_heading .heading_others .others_inputText{width:40%;height:40%}section:first-child .section1_firstHalf .firstHalf_heading .heading_others .others_inputButton{width:30%;height:40%}section:first-child .section1_firstHalf .firstHalf_heading .heading_others .others_menu{width:20%;height:40%;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;margin-right:-10%;margin-top:-1%}}
