--- a/images and css/Media Query (420 x 825).css
+++ b/images and css/Media Query (420 x 825).css
@@ -1,6 +1,7 @@
 @media (max-height: 825px) and (max-width: 480px) {
   section:nth-Child(1) .section1_firstHalf {
-    height: 30vh; }
+    height: auto;
+    background-size: cover; }
     section:nth-Child(1) .section1_firstHalf .firstHalf_heading .heading_logo {
       height: 20vh;
       margin-left: -5%;
@@ -109,6 +110,118 @@
       section:nth-child(3) .section3_secondHalf .secondHalf_rightside {
         width: 100%; }
   section:nth-child(4) {
-    height: 150vh; }
-    section:nth-child(4) .section_leftside {
-      width: 50%; } }
+    height: auto; }
+    section:nth-child(4) .section_leftside .leftside_blank {
+      width: 0; }
+    section:nth-child(4) .section_leftside .leftside_content {
+      width: 100%; }
+      section:nth-child(4) .section_leftside .leftside_content .content_video {
+        height: 0;
+        width: 0; }
+      section:nth-child(4) .section_leftside .leftside_content .box_content {
+        height: 100%; }
+        section:nth-child(4) .section_leftside .leftside_content .box_content .content_text {
+          -webkit-box-pack: space-evenly;
+          -ms-flex-pack: space-evenly;
+          justify-content: space-evenly; }
+          section:nth-child(4) .section_leftside .leftside_content .box_content .content_text .para_1 {
+            font-size: 0.956rem; }
+          section:nth-child(4) .section_leftside .leftside_content .box_content .content_text .para_2 {
+            font-size: 0.75rem; }
+          section:nth-child(4) .section_leftside .leftside_content .box_content .content_text .comment {
+            width: 65%; }
+            section:nth-child(4) .section_leftside .leftside_content .box_content .content_text .comment .separation {
+              height: 4.5vh; }
+    section:nth-child(4) .section_rightside .rightside_top {
+      height: auto;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; }
+      section:nth-child(4) .section_rightside .rightside_top .top_container .top_para {
+        font-size: 1.3rem; }
+      section:nth-child(4) .section_rightside .rightside_top .top_container .top_author {
+        margin-bottom: 10%; }
+    section:nth-child(4) .section_rightside .rightside_bottom {
+      height: 0; }
+  section:nth-child(5) {
+    height: auto;
+    background-size: cover; }
+    section:nth-child(5) .section_box .box_container {
+      width: 70%; }
+      section:nth-child(5) .section_box .box_container .container_text {
+        font-size: 1.3rem;
+        margin-top: 10%; }
+      section:nth-child(5) .section_box .box_container .container_author {
+        margin-bottom: 10%; }
+  footer {
+    height: auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+    -webkit-box-pack: space-evenly;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+    footer .rightside {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+      flex-direction: row;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      width: 100%; }
+      footer .rightside .rightside_box {
+        width: 100%; }
+        footer .rightside .rightside_box .box_top {
+          height: 100%;
+          -webkit-box-pack: center;
+          -ms-flex-pack: center;
+          justify-content: center; }
+          footer .rightside .rightside_box .box_top .top_blank {
+            width: 0; }
+          footer .rightside .rightside_box .box_top .top_contents {
+            width: 80%; }
+            footer .rightside .rightside_box .box_top .top_contents .heading {
+              font-size: 1.2rem; }
+            footer .rightside .rightside_box .box_top .top_contents .input {
+              height: 6.5vh; }
+              footer .rightside .rightside_box .box_top .top_contents .input input {
+                height: 6vh; }
+              footer .rightside .rightside_box .box_top .top_contents .input .input_button {
+                height: 6vh; }
+        footer .rightside .rightside_box .box_bottom {
+          height: 0; }
+    footer .leftside {
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      width: 80%; }
+      footer .leftside .leftside_box {
+        width: 100%;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center; }
+        footer .leftside .leftside_box .box_top .top_contents {
+          width: 100%; }
+          footer .leftside .leftside_box .box_top .top_contents .heading {
+            font-size: 1.2rem; }
+          footer .leftside .leftside_box .box_top .top_contents .para {
+            max-width: 100%; }
+        footer .leftside .leftside_box .box_bottom {
+          margin-top: 20%; }
+          footer .leftside .leftside_box .box_bottom .bottom_contents {
+            width: 100%; } }
