--- a/images and css/Media Query (420 x 825).css
+++ b/images and css/Media Query (420 x 825).css
@@ -40,9 +40,9 @@
         width: 0;
         visibility: hidden; }
   section:nth-child(2) {
-    height: 200vh; }
+    height: auto; }
     section:nth-child(2) .section2_firstHalf {
-      height: 200vh; }
+      height: auto; }
       section:nth-child(2) .section2_firstHalf .firstHalf_contents {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
@@ -52,9 +52,10 @@
         -ms-flex-pack: center;
         justify-content: center; }
         section:nth-child(2) .section2_firstHalf .firstHalf_contents .topic {
-          width: 80%; }
+          width: 80%;
+          margin-bottom: 10%; }
     section:nth-child(2) .section2_secondHalf {
-      height: 100vh;
+      height: auto;
       width: 100%;
       display: -webkit-box;
       display: -ms-flexbox;
@@ -76,11 +77,12 @@
       section:nth-child(2) .section2_secondHalf .secondHalf_para {
         font-size: 0.935rem; }
       section:nth-child(2) .section2_secondHalf .secondHalf_box {
-        width: 100%; }
+        width: 100%;
+        height: 25vh; }
   section:nth-child(3) {
-    height: 230vh; }
+    height: auto; }
     section:nth-child(3) .section3_firstHalf {
-      height: 150vh; }
+      height: auto; }
       section:nth-child(3) .section3_firstHalf .firstHalf_container {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
@@ -92,13 +94,15 @@
         -webkit-box-pack: space-evenly;
         -ms-flex-pack: space-evenly;
         justify-content: space-evenly;
-        height: 150vh; }
+        height: auto; }
         section:nth-child(3) .section3_firstHalf .firstHalf_container .topic {
-          width: 60%; }
+          width: 60%;
+          margin-top: 5%;
+          margin-bottom: 5%; }
           section:nth-child(3) .section3_firstHalf .firstHalf_container .topic .icon {
             font-size: 2rem; }
     section:nth-child(3) .section3_secondHalf {
-      height: 80vh;
+      height: auto;
       -webkit-box-orient: vertical;
       -webkit-box-direction: reverse;
       -ms-flex-direction: column-reverse;
@@ -108,7 +112,9 @@
         section:nth-child(3) .section3_secondHalf .secondHalf_leftside .leftside_container {
           width: 70%; }
       section:nth-child(3) .section3_secondHalf .secondHalf_rightside {
-        width: 100%; }
+        width: 100%;
+        height: 30vh;
+        background-size: cover; }
   section:nth-child(4) {
     height: auto; }
     section:nth-child(4) .section_leftside .leftside_blank {
@@ -129,7 +135,7 @@
           section:nth-child(4) .section_leftside .leftside_content .box_content .content_text .para_2 {
             font-size: 0.75rem; }
           section:nth-child(4) .section_leftside .leftside_content .box_content .content_text .comment {
-            width: 65%; }
+            width: 75%; }
             section:nth-child(4) .section_leftside .leftside_content .box_content .content_text .comment .separation {
               height: 4.5vh; }
     section:nth-child(4) .section_rightside .rightside_top {
@@ -149,7 +155,7 @@
     section:nth-child(5) .section_box .box_container {
       width: 70%; }
       section:nth-child(5) .section_box .box_container .container_text {
-        font-size: 1.3rem;
+        font-size: 1.1rem;
         margin-top: 10%; }
       section:nth-child(5) .section_box .box_container .container_author {
         margin-bottom: 10%; }
@@ -191,7 +197,7 @@
             footer .rightside .rightside_box .box_top .top_contents .heading {
               font-size: 1.2rem; }
             footer .rightside .rightside_box .box_top .top_contents .input {
-              height: 6.5vh; }
+              height: auto; }
               footer .rightside .rightside_box .box_top .top_contents .input input {
                 height: 6vh; }
               footer .rightside .rightside_box .box_top .top_contents .input .input_button {
@@ -215,13 +221,16 @@
         -webkit-box-align: center;
         -ms-flex-align: center;
         align-items: center; }
-        footer .leftside .leftside_box .box_top .top_contents {
-          width: 100%; }
-          footer .leftside .leftside_box .box_top .top_contents .heading {
-            font-size: 1.2rem; }
-          footer .leftside .leftside_box .box_top .top_contents .para {
-            max-width: 100%; }
+        footer .leftside .leftside_box .box_top {
+          height: auto; }
+          footer .leftside .leftside_box .box_top .top_contents {
+            width: 100%; }
+            footer .leftside .leftside_box .box_top .top_contents .heading {
+              font-size: 1.2rem; }
+            footer .leftside .leftside_box .box_top .top_contents .para {
+              max-width: 100%; }
         footer .leftside .leftside_box .box_bottom {
-          margin-top: 20%; }
+          margin-top: 20%;
+          height: auto; }
           footer .leftside .leftside_box .box_bottom .bottom_contents {
             width: 100%; } }
